@@ -1,0 +1,3 @@
+Empty directories showing how the template directory should be laid out.
+
+Only copy over the specific templates you want to customize for your store.
