@@ -1,0 +1,1 @@
+Copy the email templates here and modify for your store.
